SERVER-6045 check for valid pipeline elements

added an aggregation/bugs jstest